--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <div class="background"></div>
     <div class="player">
         <!-- Dashboard -->
         <div class="dashboard">
